# lovely

./: 2  CLAUDE.md  Cargo.toml  README.md  agenda.md  discussion.md  for_the_website.md  justfile  next_up.md  notes_for_stream.md  syntax.lv  test.ln  test.lv  todo.md  tool-names.md
checker/: Cargo.toml
checker/src/: lib.rs
cool_app/: main.lv  num.lv
cool_app/lib/: math.lv
examples/: test.asm  test.lv
examples/cool_app/: config.toml  main.lv
examples/simple_example/: config.toml  main.lv  math.lv  numbers.lv
lexer/: Cargo.toml
lexer/src/: lib.rs  span.rs  tokens.rs
parser/: Cargo.toml
parser/src/: ast.rs  lib.rs
src/: lib.rs  main.rs  span.rs
src/blossom/: mod.rs  printer.rs
src/blush/: combiner.rs  mod.rs
src/checker/: error.rs  mod.rs  scopes.rs  types.rs  vars.rs
src/codegen/: asm.rs  mod.rs
src/codegen/emitters/: mod.rs  x86_64_linux_nasm.rs
src/ir/: mod.rs  tac.rs
src/lexer/: mod.rs  tokens.rs
src/parser/: ast.rs  mod.rs
src/targets/: mod.rs
src/tests/: mod.rs
src/tests/snapshots/: lovely__tests__compiler_tests@block_expressions.lv-2.snap  lovely__tests__compiler_tests@block_expressions.lv-3.snap  lovely__tests__compiler_tests@block_expressions.lv-4.snap  lovely__tests__compiler_tests@block_expressions.lv.snap  lovely__tests__compiler_tests@functions.lv-2.snap  lovely__tests__compiler_tests@functions.lv-3.snap  lovely__tests__compiler_tests@functions.lv-4.snap  lovely__tests__compiler_tests@functions.lv.snap  lovely__tests__compiler_tests@idents.lv-2.snap  lovely__tests__compiler_tests@idents.lv-3.snap  (+22 more)
(+14 files in other folders)
